--- a/.github/workflows/firstaction.yml
+++ b/.github/workflows/firstaction.yml
@@ -21,7 +21,7 @@ jobs:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
     env:
-       name: Gift G
+       name: Gifti G
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
